@@ -50,28 +50,28 @@
 }
 
 \usage{
-effect(term, mod, ...)
+effect(term, mod, vcov.=vcov, ...)
 
 Effect(focal.predictors, mod, ...)
 
 \method{Effect}{lm}(focal.predictors, mod, xlevels = list(), default.levels = NULL, given.values,
-    se = TRUE, confidence.level = 0.95, 
+    vcov.=vcov, se = TRUE, confidence.level = 0.95, 
     transformation = list(link = family(mod)$linkfun, inverse = family(mod)$linkinv), 
     typical = mean, offset = mean, 
     partial.residuals=FALSE, quantiles=seq(0.2, 0.8, by=0.2),
     x.var=NULL,  ...)
         
 \method{Effect}{gls}(focal.predictors, mod, xlevels = list(), default.levels=NULL, 
-    given.values, se = TRUE, confidence.level = 0.95, transformation = NULL, 
+    given.values, vcov.=vcov, se = TRUE, confidence.level = 0.95, transformation = NULL, 
     typical = mean, ...)
     
 \method{Effect}{multinom}(focal.predictors, mod, 
     confidence.level=.95, xlevels=list(), default.levels=NULL, 
-    given.values, se=TRUE, typical=mean, ...)
+    given.values, vcov.=vcov, se=TRUE, typical=mean, ...)
                             
 \method{Effect}{polr}(focal.predictors, mod, 
     confidence.level=.95, xlevels=list(), default.levels=NULL, 
-    given.values, se=TRUE, typical=mean, latent=FALSE, ...)
+    given.values, vcov.=vcov, se=TRUE, typical=mean, latent=FALSE, ...)
     
 \method{Effect}{mer}(focal.predictors, mod, ...)
 
@@ -85,7 +85,7 @@ Effect(focal.predictors, mod, ...)
 
 \method{Effect}{default}(focal.predictors, mod, xlevels = list(), 
     default.levels = NULL, given.values,
-    se = TRUE, confidence.level = 0.95, 
+    vcov. = vcov, se = TRUE, confidence.level = 0.95, 
     transformation = list(link = I, inverse = I), 
     typical = mean, offset = mean, ...)
     
@@ -142,6 +142,13 @@ allEffects(mod, ...)
   	(below). Care must be taken in specifying these values --- e.g.,
   	for a factor, the values of all contrasts should be given and these
   	should be consistent with each other.}
+  \item{vcov.}{The name of a function that will be used to get the estimated variance
+    covariance matrix of the estimated coefficients.  This will ordinarily be the default,
+    \code{vcov}, which will result in the function call \code{vcov(mod)} to get the variance
+    covariance matrix.  You can use the name of any function with \code{mod} as the value of
+    its first argument that returns an estimated sample covariance matrix, such as the \code{\link{hccm}}
+    function in the \code{car} package that returns a heteroscedasticity corrected estimate with
+    linear models.}
   \item{se}{if \code{TRUE}, the default, calculate standard errors and
     confidence limits for the effects.  For mer and lme objects, the
     normal distribution is used to get confidence limits.}
